PermissionProvider updated